--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,12 @@
 .App {
-  text-align: center;
+  /*text-align: center;*/
   background: antiquewhite;
-  min-height: 100vh;
+  /*min-height: 100vh;*/
   min-width: 100vw;
+  /*min-width: 90vw;*/
+  min-height: 100vh;
+  font-size: medium;
+  /*max-width: 100vw;*/
 }
 
 .login {
@@ -16,3 +20,18 @@
   min-height: 100vh;
 
 }
+
+.topBar{
+  font-size: large;
+  font-weight: bolder;
+}
+
+.companyTable{
+  width: available;
+  padding-right: 0px;
+  padding-left: 0px;
+  min-width: auto;
+  max-width: 100%;
+}
+
+
