--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,20 @@
 .App {
-  /*text-align: center;*/
-  background: antiquewhite;
-  /*min-height: 100vh;*/
+
+  background: #3b5998;
   min-width: 100vw;
-  /*min-width: 90vw;*/
   min-height: 100vh;
-  font-size: medium;
-  /*max-width: 100vw;*/
+  padding-right: 0;
+  padding-left: 0;
+  /*display: flex;*/
+  display: flow;
+  font-size: large;
+  color: white;
+  /*font-family: "Calibri Light";*/
+  font-family: "Roboto Light";
 }
 
 .login {
-  background: black;
+  background: #232e4a;
   color: white;
   display: flex;
   flex-direction: column;
@@ -18,20 +22,56 @@
   align-items: center;
   text-align: center;
   min-height: 100vh;
+  min-width: 100vw;
+  font-family: "Roboto Light";
+  font-size: larger;
 
 }
 
 .topBar{
   font-size: large;
   font-weight: bolder;
+  align-self: center;
+  align-content: center;
+  alignment: center;
+  background: #232e4a;
+  color: white;
+  /*width: available;*/
+  min-width:available ;
+  /*max-height: 15vh;*/
+}
+.bellIcon{
+  max-height: 10vh;
+  /*width: 100%;*/
+  object-fit: contain;
+}
+
+.mainNav{
+  width: inherit;
+
 }
 
 .companyTable{
-  width: available;
   padding-right: 0px;
   padding-left: 0px;
-  min-width: auto;
-  max-width: 100%;
+  /*min-width: fit-content;*/
+  max-width: 100vw;
+  /*max-width: 100%;*/
+  color: black;
+}
+
+.text{
+  color: black;
+}
+
+.tradeScreen{
+  background: white;
+  max-width: fit-content;
+  max-height: fit-content;
+  flex-direction: row;
+
+
+  /*width: fit-content;*/
 }
 
 
