--- a/src/App.css
+++ b/src/App.css
@@ -69,9 +69,32 @@
   max-width: fit-content;
   max-height: fit-content;
   flex-direction: row;
+  }
 
+.updates{
+  padding-left: 5%;
+  padding-right: 5%;
+  align-items: center;
+  align-self: center;
+  color: black;
+  font-weight: bold;
+  /*flex-direction: inherit;*/
 
-  /*width: fit-content;*/
 }
 
+.companyPhoto {
+  max-height: 50vh;
+  align-items: center;
+}
+
+.companyPage{
+  align-items: center;
+  alignment: center;
+  align-content: center;
+}
+
+.companyDescription {
+  align-self: center;
+  align-content: center;
+}
 
