login screen layout done, bug fixes

--- a/src/App.css
+++ b/src/App.css
@@ -96,5 +96,14 @@
 .companyDescription {
   align-self: center;
   align-content: center;
+
 }
 
+.loginButtons{
+margin-bottom: 2%;
+}
+
+.terms{
+  font-weight: bold;
+  text-underline: white;
+}
